smbd: enable multi-channel if 'server multi channel support = yes' in the config

Signed-off-by: Michael Adam <obnox@samba.org>
Reviewed-by: Stefan Metzmacher <metze@samba.org>

Autobuild-User(master): Michael Adam <obnox@samba.org>
Autobuild-Date(master): Tue Mar 15 20:58:19 CET 2016 on sn-devel-144

(cherry picked from commit e85e4055b940ea3be4e5beb12a62ad448dbbc73d)

BUG: https://bugzilla.samba.org/show_bug.cgi?id=11796

Autobuild-User(v4-4-test): Stefan Metzmacher <metze@samba.org>
Autobuild-Date(v4-4-test): Wed Mar 16 03:16:40 CET 2016 on sn-devel-144